--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy </br> text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
         </p>
         <hr/>
-<img src="/img/gatito.jpg" alt="imagen gatito" title="gatito" width="25%" height="500%" />
+<img src="img/gatito.jpg" alt="imagen gatito" title="gatito" width="25%" height="500%" />
    <br>
     <a href="https://knornelas.000webhostapp.com/">Página en 000Webhost</a> <br>
     <a href="https://karenornelas.knornelas.repl.co/">Página en replit</a> <br>
