--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a href="https://knornelas.000webhostapp.com/">Página en 000Webhost</a> <br>
     <a href="https://karenornelas.knornelas.repl.co/">Página en replit</a> <br>
     <a href="https://knornelas.herokuapp.com/">Página en Heroku</a><br>
-    <a href="https://karen89k.github.io/knornelas-page/">Página en Github</a><br>
+    <a href="https://karen89k.github.io/pagina-karen/">Página en Github</a><br>
 
         <hr/>
         <h3><em>Why do we use it?</em></h3>
