--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>PAGINA PARA LA MATERIA PRACTICA DE DESARROLLO 2</title>
     </head>
     <body style="background-color: grey" >
-        <h1>PÃ¡gina prueba de PDS2</h1>
+        <h1>Pagina prueba de PDS2</h1>
         <h2>Bienvenidos a mi web</h2>
         <p><b> Mi nombre es Karen Cristina Ornelas Perez, soy estudiante de ISI de la Universidad de Sonora</b> </p>
         <p>
@@ -18,10 +18,10 @@
 <img src="img/cat.jpg" alt="imagen gatito" title="gatito" width="25%" height="500%" />
    <br>
    <P><b>URLS A MIS OTROS SITIOS:</b></P>
-    <a href="https://knornelas.000webhostapp.com/">PÃ¡gina en 000Webhost</a> <br>
-    <a href="https://karenornelas.knornelas.repl.co/">PÃ¡gina en replit</a> <br>
-    <a href="https://knornelas.herokuapp.com/">PÃ¡gina en Heroku</a><br>
-    <a href="https://karen89k.github.io/knornelas-page/">PÃ¡gina en Github</a><br>
+    <a href="https://knornelas.000webhostapp.com/">Pagina en 000Webhost</a> <br>
+    <a href="https://karenornelas.knornelas.repl.co/">Pagina en replit</a> <br>
+    <a href="https://knornelas.herokuapp.com/">Pagina en Heroku</a><br>
+    <a href="https://karen89k.github.io/knornelas-page/">Pagina en Github</a><br>
 
         <hr/>
         <h3><em>Why do we use it?</em></h3>
