--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h2>Bienvenidos a mi web</h2>
         <p><b> Mi nombre es Karen Cristina Ornelas Perez, soy estudiante de ISI de la Universidad de Sonora</b> </p>
         <p>
-            Me gusta leer, ver series(mi favorita es The Vampire Diares) y Ãºltimamente me dedico a escribir pequeÃ±as historias. &#x2764;
+            Me gusta leer, ver series(mi favorita es The Vampire Diares) y ultimamente me dedico a escribir pequeñas historias. &#x2764;
            <p><br>Soy fan de Cazadores de sombras. &#128214;<p>
             
             </p>
