--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     <a href="https://knornelas.000webhostapp.com/">Pagina en 000Webhost</a> <br>
     <a href="https://karenornelas.knornelas.repl.co/">Pagina en replit</a> <br>
     <a href="https://knornelas.herokuapp.com/">Pagina en Heroku</a><br>
-    <a href="https://karen89k.github.io/knornelas-page/">Pagina en Github</a><br>
-
+    <a href="https://karen89k.github.io/pagina-karen/">Pagina en Github</a><br>
         <hr/>
         <h3><em>Why do we use it?</em></h3>
         <P>  
